--- a/jupytercode.py.ipynb
+++ b/jupytercode.py.ipynb
@@ -36,7 +36,7 @@
     }
    ],
    "source": [
-    "pip install scikit-learn\n"
+    "pip install scikit-learn.__version__=='1.0.2'\n"
    ]
   },
   {
